Add two more references to the bibliography

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -8,47 +8,64 @@
 }
 
 @inproceedings{min2017,
-author = {Z. Min and W. Linglin and Z. Linjiang and S. Dihua},
-booktitle = {2017 29th Chinese Control And Decision Conference (CCDC)},
-title = {Simulation of pedestrian behaviors based on an improved floor field cellular automaton model under attractive incidents},
-year = {2017},
-volume = {},
-number ={},
-pages ={3602-3607},
-keywords ={behavioural sciences;cellular automata;pedestrians;attractive field;attractive incident degree;dynamic floor field;floor field cellular automaton model;onlooker view distance;pedestrian behavior simulation;pedestrian transition probability;pedestrians safe psychological distance;static floor field;Automata;Computational modeling;Floors;Layout;Legged locomotion;Microscopy;Psychology;attractive incidents;floor field CA model;onlooking behaviors;pedestrian flow},
-doi ={10.1109/CCDC.2017.7979130},
-ISSN ={},
-month ={May}
+    author = {Z. Min and W. Linglin and Z. Linjiang and S. Dihua},
+    booktitle = {2017 29th Chinese Control And Decision Conference (CCDC)},
+    title = {Simulation of pedestrian behaviors based on an improved floor field cellular automaton model under attractive incidents},
+    year = {2017},
+    pages = {3602-3607},
+    keywords = {behavioural sciences;cellular automata;pedestrians;attractive field;attractive incident degree;dynamic floor field;floor field cellular automaton model;onlooker view distance;pedestrian behavior simulation;pedestrian transition probability;pedestrians safe psychological distance;static floor field;Automata;Computational modeling;Floors;Layout;Legged locomotion;Microscopy;Psychology;attractive incidents;floor field CA model;onlooking behaviors;pedestrian flow},
+    doi = {10.1109/CCDC.2017.7979130},
+    month = {May}
 }
 
 @article{zhang2007,
-author ={Y. Zhang and H. Duan},
-journal ={Tsinghua Science and Technology},
-title ={Modeling mixed traffic flow at crosswalks in microsimulations using cellular automata},
-year ={2007},
-volume ={12},
-number ={2},
-pages ={214-222},
-keywords ={Adaptation models;Analytical models;Automata;Bidirectional control;Roads;Turning;Vehicles;cellular automata;micro-simulation;mixed traffic flow},
-doi ={10.1016/S1007-0214(07)70030-5},
-ISSN ={},
-month ={April}
+    author = {Y. Zhang and H. Duan},
+    journal = {Tsinghua Science and Technology},
+    title = {Modeling mixed traffic flow at crosswalks in microsimulations using cellular automata},
+    year = {2007},
+    volume = {12},
+    number = {2},
+    pages = {214-222},
+    keywords = {Adaptation models;Analytical models;Automata;Bidirectional control;Roads;Turning;Vehicles;cellular automata;micro-simulation;mixed traffic flow},
+    doi = {10.1016/S1007-0214(07)70030-5},
+    month = {April}
 }
 
 @misc{kruyswijk2016,
-title ={Ongelooflijk, maar er gaat niks mis in Shared Space - Amsterdam - PAROOL},
-url ={https://www.parool.nl/amsterdam/ongelooflijk-maar-er-gaat-niks-mis-in-shared-space~a4252699/},
-journal ={Het Parool},
-publisher ={Het Parool},
-author ={Kruyswijk, Marc},
-year ={2016}, month ={Feb}
+    title = {Ongelooflijk, maar er gaat niks mis in Shared Space - Amsterdam - PAROOL},
+    url = {https://www.parool.nl/amsterdam/ongelooflijk-maar-er-gaat-niks-mis-in-shared-space~a4252699/},
+    journal = {Het Parool},
+    publisher = {Het Parool},
+    author = {Kruyswijk, Marc},
+    year = {2016},
+    month = {Feb}
 }
 
 @misc{andreadis2017,
-title ={gandreadis/danger-zone},
-url ={https://github.com/gandreadis/danger-zone},
-journal ={GitHub},
-author ={Andreadis, Georgios},
-year ={2017},
-month ={Dec}
+    title = {github.com/gandreadis/danger-zone},
+    url = {https://github.com/gandreadis/danger-zone},
+    journal = {GitHub},
+    author = {Andreadis, Georgios},
+    year = {2017},
+    month = {Dec}
+}
+
+@inproceedings{krajzewicz2014,
+    year = {2014},
+    title = {{ I } ncluding pedestrian and bicycle traffic into the traffic simulation { SUMO }},
+    author = {{ K } rajzewicz, { D } aniel and { E } rdmann, { J } akob and { H } { \"a } rri, { J } { \'e } r { \^o } me and { S } pyropoulos, { T } hrasyvoulos },
+    booktitle = {{ ITS } 2014, 10th { ITS } { E } uropean { C } ongress, 16-19 { J } une 2014, { H } elsinki, { F } inland},
+    address = {{ H } elsinki, { FINLAND }},
+    month = {06},
+    url = {http://www.eurecom.fr/publication/4544}
+}
+
+@misc{kupferschmid2016,
+    title = {How to model pedestrians and cyclists interactions with out-of-the-box features of Vissim?},
+    url = {https://blogs.ethz.ch/engagingmobility/2016/07/10/how-to-model-pedestrians-and-cyclists-interactions-with-out-of-the-box-features-of-vissim/},
+    journal = {Engaging Mobility},
+    publisher = {ETHZ},
+    author = {Kupferschmid, Jonas},
+    year = {2016},
+    month = {Jul}
 }
