Add first full version of report

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -69,3 +69,33 @@
     year = {2016},
     month = {Jul}
 }
+
+@article {hamilton2008,
+    title = {Shared Space: Reconciling People, Places and Traffic},
+    journal = {Built Environment},
+    year = {2008},
+    volume = {34},
+    number = {2},
+    pages = {161-181},
+    issn = {0263-7960},
+    url = {http://www.ingentaconnect.com/content/alex/benv/2008/00000034/00000002/art00003},
+    doi = {doi:10.2148/benv.34.2.161},
+    author = {Hamilton-Baillie, Ben},
+}
+
+@article{clarke2006,
+    title={Shared Space -- the alternative approach to calming traffic},
+    author={Clarke, Emma},
+    journal={Traffic engineering \& control},
+    volume={47},
+    number={8},
+    year={2006}
+}
+
+@misc{vox2017,
+	title = {{Road signs suck. What if we got rid of them all? - YouTube}},
+	year = {2017},
+	month = {Dec},
+	note = {[Online; accessed 28. Dec. 2017]},
+	url = {https://www.youtube.com/watch?v=VUbsFtLkGN8}
+}
