Add images and tweak font

--- a/report/main.tex
+++ b/report/main.tex
@@ -5,7 +5,7 @@
 
 % Fonts
 \usepackage{titlesec}
-\usepackage{avant}
+\usepackage{helvet}
 \usepackage{mathptmx}
 
 % Chapter titles
@@ -81,14 +81,17 @@ Heather Taylor, Tanisha Servet
     \begin{titlepage}
         \centering
 
-        {\scshape\LARGE VU Amsterdam \par}
+        \includegraphics[width=1.5in]{images/vu-logo.png}\par
         \vspace{1cm}
         {\scshape\Large Collective Intelligence\par}
-        \vspace{5cm}
+        \vspace{1.5cm}
 
-        {\huge\bfseries\sffamily \thetitle \par}
+        {\Huge\bfseries\normalfont\sffamily \thetitle \par}
         \par\vspace{1cm}
         {\Large\itshape \theauthor \par}
+        \vspace{1.5cm}
+
+        \includegraphics[width=15cm]{images/junction.jpeg}\par
 
         \vfill
 
