Add simulation data link footnote

--- a/report/main.tex
+++ b/report/main.tex
@@ -66,6 +66,8 @@ tabsize=2,
 frame=single
 }
 
+\usepackage[font=small,labelfont=bf]{caption}
+
 \title{Danger-Zone: A comparative study of mixed-traffic scenarios using collective intelligence simulation}
 \author{
 Georgios Andreadis, Jackson Matlak,\\
